# teamster

./: .envrc  .gitignore  README.md  docker-compose.yml  flake.nix  makefile  manage.py  shell.nix  shell.nix.bak
.direnv/: flake-profile-4-link
api/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
api/config/: settings.py  urls.py
api/members/: models.py  urls.py
config/: settings.py
members/: serializers.py  tests.py  views.py
members/migrations/: 0001_initial.py
ui/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
ui/src/: App.css  App.tsx  types.ts  vite-env.d.ts
ui/src/api/: axiosClient.ts
ui/src/components/: AddMember.test.tsx  AddMember.tsx  EditMember.tsx  MemberCard.tsx  MemberForm.tsx  MemberList.test.tsx  MemberList.tsx
